fixed gapping

--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@ body {
 h1 {
     font-size: 50px;
     color: rgb(59, 59, 59);
+    margin-bottom: 0%;
 }
 
 h3 {
     font-size: 20px;
+    font-weight: 600;
     color: rgb(59, 59, 59);
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .small-size {
